// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot renders correctly element1 1`] = `
<div
  class="slider__inputs"
>
  
      
  <div
    class="slider__input"
  >
    
        
    <label
      class="slider__label"
      for="min#banana"
    >
      Минимальное значение
    </label>
    
        
    <br />
    
        
    <input
      class="slider__min slider__number"
      data-name="min"
      id="min#banana"
      type="number"
      value="0"
    />
    
      
  </div>
  
      
  <div
    class="slider__input"
  >
    
        
    <label
      class="slider__label"
      for="max#banana"
    >
      Максимальное значение
    </label>
    
        
    <br />
    
        
    <input
      class="slider__max slider__number"
      data-name="max"
      id="max#banana"
      type="number"
      value="100"
    />
    
      
  </div>
  
      
      
  <div
    class="slider__input"
  >
    
        
    <label
      class="slider__label"
      for="to#banana"
    >
      Текущее значение
    </label>
    
        
    <br />
    
        
    <input
      class="slider__to slider__number"
      data-name="to"
      id="to#banana"
      readonly=""
      type="number"
      value="100"
    />
    
      
  </div>
  
      
  <div
    class="slider__input"
  >
    
        
    <label
      class="slider__label"
      for="step#banana"
    >
      Шаг
    </label>
    
        
    <br />
    
        
    <input
      class="slider__step slider__number"
      data-name="step"
      id="step#banana"
      type="number"
      value="1"
    />
    
      
  </div>
  
      
  <div
    class="slider__input"
  >
    
        
    <input
      checked=""
      class="slider__view"
      data-name="view"
      id="horizontal#banana"
      name="view#banana"
      type="radio"
      value="horizontal"
    />
    
        
    <label
      for="horizontal#banana"
    >
      Горизонтальный
    </label>
    
        
    <input
      class="slider__view"
      data-name="view"
      id="vertical#banana"
      name="view#banana"
      type="radio"
      value="vertical"
    />
    
        
    <label
      for="vertical#banana"
    >
      Вертикальный
    </label>
    
      
  </div>
  
      
  <div
    class="slider__input"
  >
    
        
    <input
      checked=""
      class="slider__range"
      data-name="range"
      id="one#banana"
      name="range#banana"
      type="radio"
      value="one"
    />
    
        
    <label
      for="one#banana"
    >
      Одиночное значение
    </label>
    
        
    <input
      class="slider__range"
      data-name="range"
      id="range#banana"
      name="range#banana"
      type="radio"
      value="range"
    />
    
        
    <label
      for="range#banana"
    >
      Интервал
    </label>
    
      
  </div>
  
      
  <div
    class="slider__input"
  >
    
        
    <input
      checked=""
      class="slider__flag-checkbox"
      data-name="flag"
      id="flag#banana"
      type="checkbox"
    />
    
        
    <label
      for="flag#banana"
    >
      Значение
    </label>
    
      
  </div>
  
      
  <div
    class="slider__input"
  >
    
        
    <input
      checked=""
      class="slider__scale-checkbox"
      data-name="scale"
      id="scale#banana"
      type="checkbox"
    />
    
        
    <label
      for="scale#banana"
    >
      Шкала
    </label>
    
      
  </div>
  
      
  <div
    class="slider__input"
  >
    
        
    <input
      checked=""
      class="slider__progress-checkbox"
      data-name="progress"
      id="progress#banana"
      type="checkbox"
    />
    
        
    <label
      for="progress#banana"
    >
      Прогресс
    </label>
    
      
  </div>
  
    
</div>
`;

exports[`snapshot renders correctly element2 1`] = `
<div
  class="slider__inputs"
>
  
      
  <div
    class="slider__input"
  >
    
        
    <label
      class="slider__label"
      for="min#banana"
    >
      Минимальное значение
    </label>
    
        
    <br />
    
        
    <input
      class="slider__min slider__number"
      data-name="min"
      id="min#banana"
      type="number"
      value="0"
    />
    
      
  </div>
  
      
  <div
    class="slider__input"
  >
    
        
    <label
      class="slider__label"
      for="max#banana"
    >
      Максимальное значение
    </label>
    
        
    <br />
    
        
    <input
      class="slider__max slider__number"
      data-name="max"
      id="max#banana"
      type="number"
      value="100"
    />
    
      
  </div>
  
      
        
  <div
    class="slider__input"
  >
    
          
    <label
      class="slider__label"
      for="from#banana"
    >
      От
    </label>
    
          
    <br />
    
          
    <input
      class="slider__from slider__number"
      data-name="from"
      id="from#banana"
      readonly=""
      type="number"
      value="0"
    />
    
        
  </div>
  
      
      
  <div
    class="slider__input"
  >
    
        
    <label
      class="slider__label"
      for="to#banana"
    >
      До
    </label>
    
        
    <br />
    
        
    <input
      class="slider__to slider__number"
      data-name="to"
      id="to#banana"
      readonly=""
      type="number"
      value="100"
    />
    
      
  </div>
  
      
  <div
    class="slider__input"
  >
    
        
    <label
      class="slider__label"
      for="step#banana"
    >
      Шаг
    </label>
    
        
    <br />
    
        
    <input
      class="slider__step slider__number"
      data-name="step"
      id="step#banana"
      type="number"
      value="1"
    />
    
      
  </div>
  
      
  <div
    class="slider__input"
  >
    
        
    <input
      checked=""
      class="slider__view"
      data-name="view"
      id="horizontal#banana"
      name="view#banana"
      type="radio"
      value="horizontal"
    />
    
        
    <label
      for="horizontal#banana"
    >
      Горизонтальный
    </label>
    
        
    <input
      class="slider__view"
      data-name="view"
      id="vertical#banana"
      name="view#banana"
      type="radio"
      value="vertical"
    />
    
        
    <label
      for="vertical#banana"
    >
      Вертикальный
    </label>
    
      
  </div>
  
      
  <div
    class="slider__input"
  >
    
        
    <input
      class="slider__range"
      data-name="range"
      id="one#banana"
      name="range#banana"
      type="radio"
      value="one"
    />
    
        
    <label
      for="one#banana"
    >
      Одиночное значение
    </label>
    
        
    <input
      checked=""
      class="slider__range"
      data-name="range"
      id="range#banana"
      name="range#banana"
      type="radio"
      value="range"
    />
    
        
    <label
      for="range#banana"
    >
      Интервал
    </label>
    
      
  </div>
  
      
  <div
    class="slider__input"
  >
    
        
    <input
      checked=""
      class="slider__flag-checkbox"
      data-name="flag"
      id="flag#banana"
      type="checkbox"
    />
    
        
    <label
      for="flag#banana"
    >
      Значение
    </label>
    
      
  </div>
  
      
  <div
    class="slider__input"
  >
    
        
    <input
      checked=""
      class="slider__scale-checkbox"
      data-name="scale"
      id="scale#banana"
      type="checkbox"
    />
    
        
    <label
      for="scale#banana"
    >
      Шкала
    </label>
    
      
  </div>
  
      
  <div
    class="slider__input"
  >
    
        
    <input
      checked=""
      class="slider__progress-checkbox"
      data-name="progress"
      id="progress#banana"
      type="checkbox"
    />
    
        
    <label
      for="progress#banana"
    >
      Прогресс
    </label>
    
      
  </div>
  
    
</div>
`;

exports[`snapshot renders correctly element3 1`] = `
<div
  class="slider__inputs"
>
  
      
  <div
    class="slider__input"
  >
    
        
    <label
      class="slider__label"
      for="min#banana"
    >
      Минимальное значение
    </label>
    
        
    <br />
    
        
    <input
      class="slider__min slider__number"
      data-name="min"
      id="min#banana"
      type="number"
      value="0"
    />
    
      
  </div>
  
      
  <div
    class="slider__input"
  >
    
        
    <label
      class="slider__label"
      for="max#banana"
    >
      Максимальное значение
    </label>
    
        
    <br />
    
        
    <input
      class="slider__max slider__number"
      data-name="max"
      id="max#banana"
      type="number"
      value="100"
    />
    
      
  </div>
  
      
        
  <div
    class="slider__input"
  >
    
          
    <label
      class="slider__label"
      for="from#banana"
    >
      От
    </label>
    
          
    <br />
    
          
    <input
      class="slider__from slider__number"
      data-name="from"
      id="from#banana"
      readonly=""
      type="number"
      value="10"
    />
    
        
  </div>
  
      
      
  <div
    class="slider__input"
  >
    
        
    <label
      class="slider__label"
      for="to#banana"
    >
      До
    </label>
    
        
    <br />
    
        
    <input
      class="slider__to slider__number"
      data-name="to"
      id="to#banana"
      readonly=""
      type="number"
      value="90"
    />
    
      
  </div>
  
      
  <div
    class="slider__input"
  >
    
        
    <label
      class="slider__label"
      for="step#banana"
    >
      Шаг
    </label>
    
        
    <br />
    
        
    <input
      class="slider__step slider__number"
      data-name="step"
      id="step#banana"
      type="number"
      value="1"
    />
    
      
  </div>
  
      
  <div
    class="slider__input"
  >
    
        
    <input
      class="slider__view"
      data-name="view"
      id="horizontal#banana"
      name="view#banana"
      type="radio"
      value="horizontal"
    />
    
        
    <label
      for="horizontal#banana"
    >
      Горизонтальный
    </label>
    
        
    <input
      checked=""
      class="slider__view"
      data-name="view"
      id="vertical#banana"
      name="view#banana"
      type="radio"
      value="vertical"
    />
    
        
    <label
      for="vertical#banana"
    >
      Вертикальный
    </label>
    
      
  </div>
  
      
  <div
    class="slider__input"
  >
    
        
    <input
      class="slider__range"
      data-name="range"
      id="one#banana"
      name="range#banana"
      type="radio"
      value="one"
    />
    
        
    <label
      for="one#banana"
    >
      Одиночное значение
    </label>
    
        
    <input
      checked=""
      class="slider__range"
      data-name="range"
      id="range#banana"
      name="range#banana"
      type="radio"
      value="range"
    />
    
        
    <label
      for="range#banana"
    >
      Интервал
    </label>
    
      
  </div>
  
      
  <div
    class="slider__input"
  >
    
        
    <input
      class="slider__flag-checkbox"
      data-name="flag"
      id="flag#banana"
      type="checkbox"
    />
    
        
    <label
      for="flag#banana"
    >
      Значение
    </label>
    
      
  </div>
  
      
  <div
    class="slider__input"
  >
    
        
    <input
      class="slider__scale-checkbox"
      data-name="scale"
      id="scale#banana"
      type="checkbox"
    />
    
        
    <label
      for="scale#banana"
    >
      Шкала
    </label>
    
      
  </div>
  
      
  <div
    class="slider__input"
  >
    
        
    <input
      class="slider__progress-checkbox"
      data-name="progress"
      id="progress#banana"
      type="checkbox"
    />
    
        
    <label
      for="progress#banana"
    >
      Прогресс
    </label>
    
      
  </div>
  
    
</div>
`;
